log
Sat 27 Apr 2024 06:44:42 AM UTC: 
 tests:  0|6
total_score: 0/70
380112c
Sat 27 Apr 2024 06:50:40 AM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|5
total_score: 10/70
7b1e9b1
Sat 27 Apr 2024 07:04:57 AM UTC: 
 hashmap.c | 33 +++++++++++++++++++++++----------
 1 file changed, 23 insertions(+), 10 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:48: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
   46 |   while(map->buckets[posicion] != NULL && map->bucket[posicion]->key != NULL)
      |                                                ^~~~~~
      |                                                buckets
Compilation failed
a0ea424
Sat 27 Apr 2024 07:05:02 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
8a6ca20
Sat 27 Apr 2024 07:23:53 AM UTC: 
 hashmap.c | 49 +++++++++++++++++++++++++++++++++++++------------
 1 file changed, 37 insertions(+), 12 deletions(-)
In file included from test.c:4:
hashmap.c:100:1: error: expected identifier or ‘(’ before ‘}’ token
  100 | }
      | ^
Compilation failed
7035b98
Sat 27 Apr 2024 07:29:13 AM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  9|3
total_score: 40/70
301116a
Sat 27 Apr 2024 07:40:10 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
a8c82f4
Sat 27 Apr 2024 07:41:18 AM UTC: 
 hashmap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
test.c: In function ‘eraseMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
221fd01
Sat 27 Apr 2024 07:41:26 AM UTC: 
 hashmap.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  9|3
total_score: 40/70
9726fdd
Sat 27 Apr 2024 07:42:44 AM UTC: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  11|2
total_score: 50/70
c20ba97
Mon 29 Apr 2024 01:31:20 AM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:112:24: error: ‘key’ undeclared (first use in this function); did you mean ‘key_t’?
  112 |   long posicion = hash(key,map->capacity);
      |                        ^~~
      |                        key_t
hashmap.c:112:24: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:116:1: error: control reaches end of non-void function [-Werror=return-type]
  116 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4f86774
Mon 29 Apr 2024 01:31:38 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:113:3: error: expected ‘,’ or ‘;’ before ‘if’
  113 |   if(map->buckets[posicion]!= NULL)
      |   ^~
hashmap.c:116:1: error: control reaches end of non-void function [-Werror=return-type]
  116 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
85f1d6e
Mon 29 Apr 2024 01:31:44 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:116:1: error: control reaches end of non-void function [-Werror=return-type]
  116 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
280f530
Mon 29 Apr 2024 01:46:39 AM UTC: 
 hashmap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:120:1: error: control reaches end of non-void function [-Werror=return-type]
  120 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f30eab8
Mon 29 Apr 2024 01:47:11 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
2479d5b
Mon 29 Apr 2024 02:03:01 AM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  16|1
total_score: 60/70
d330771
Mon 29 Apr 2024 02:03:22 AM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  16|1
total_score: 60/70
a34966c
Mon 29 Apr 2024 02:27:16 AM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
4c36df2
